--- a/print.html
+++ b/print.html
@@ -5,9 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PDF + Image Merge Tool</title>
 <style>
-body {font-family: Arial, sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
+body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 input, button {margin:10px; padding:10px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:20px; width:120px; height:auto; display:flex; flex-direction:column; align-items:center;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:20px; width:120px; display:flex; flex-direction:column; align-items:center;}
+#preview div {width:100%; text-align:left; font-size:10px; margin-bottom:5px;}
 #preview img {width:100%; height:100%; object-fit:cover;}
 .btn3d {padding:15px 30px; font-size:16px; border-radius:12px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);}
 .btn3d:active {transform:translateY(5px); box-shadow:0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
@@ -22,7 +23,6 @@ input, button {margin:10px; padding:10px;}
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
-
 <label>Select Image File (Save Once):</label>
 <input type="file" id="imgFile" accept="image/*">
 <div id="imagesList"></div>
@@ -76,7 +76,7 @@ document.getElementById('imgFile').addEventListener('change', function(){
 
 function displayImage(src){
     const div = document.getElementById('imagesList');
-    div.innerHTML = '';
+    div.innerHTML='';
     const box = document.createElement('div');
     box.className='img-box';
     const img=document.createElement('img');
@@ -87,56 +87,33 @@ function displayImage(src){
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Merge preview
-async function mergePreview(){
+// Merge preview using HTML
+function mergePreview(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return; }
     const previewDiv = document.getElementById('preview');
     previewDiv.innerHTML='';
-    // create canvas for jsPDF
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
-    let y=5;
-    for(const pageText of pdfPages){
-        const lines = doc.splitTextToSize(pageText, 45);
-        for(const line of lines){
-            doc.text(line,5,y);
-            y+=4;
-            if(y>160){ doc.addPage(); y=5; }
-        }
-    }
+
+    // PDF text as divs
+    pdfPages.forEach(pageText=>{
+        const lines = pageText.split('\n');
+        lines.forEach(line=>{
+            const div = document.createElement('div');
+            div.innerText = line;
+            previewDiv.appendChild(div);
+        });
+    });
+
+    // Image below
     if(imgData){
-        const img=new Image();
-        img.src=imgData;
-        await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,40,40); // 2 inch x 2 inch approx
+        const img = document.createElement('img');
+        img.src = imgData;
+        img.style.width='50px'; // 2 inch approx
+        img.style.height='50px';
+        previewDiv.appendChild(img);
     }
-    const dataUrl = doc.output('dataurlstring');
-    const imgPreview = document.createElement('img');
-    imgPreview.src=dataUrl;
-    previewDiv.appendChild(imgPreview);
 }
 
-// Print
-async function printDoc(){
-    const doc = await generateDoc();
-    if(doc) doc.autoPrint(); window.open(doc.output('bloburl'),'_blank');
-}
-
-// Download
-async function downloadDoc(){
-    const doc = await generateDoc();
-    if(doc) doc.save('Voter_Merged.pdf');
-}
-
-// WhatsApp send
-async function sendWhatsApp(){
-    const doc = await generateDoc();
-    const blob = doc.output('blob');
-    const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
-    const url = URL.createObjectURL(file);
-    window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
-}
-
-// generate jsPDF
+// Generate jsPDF for print/download/WhatsApp
 async function generateDoc(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
     const doc = new jsPDF({unit:'mm', format:[50,200]});
@@ -150,12 +127,28 @@ async function generateDoc(){
         }
     }
     if(imgData){
-        const img=new Image();
+        const img = new Image();
         img.src=imgData;
         await new Promise(r=>img.onload=r);
         doc.addImage(imgData,'JPEG',5,y,40,40);
     }
     return doc;
+}
+
+async function printDoc(){
+    const doc = await generateDoc();
+    if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
+}
+async function downloadDoc(){
+    const doc = await generateDoc();
+    if(doc) doc.save('Voter_Merged.pdf');
+}
+async function sendWhatsApp(){
+    const doc = await generateDoc();
+    const blob = doc.output('blob');
+    const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
+    const url = URL.createObjectURL(file);
+    window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
 </body>
