--- a/print.html
+++ b/print.html
@@ -6,12 +6,20 @@
 <title>PDF + Image Merge Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
+h2 {margin-bottom:20px;}
 input, button {margin:10px; padding:10px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:20px; width:120px; display:flex; flex-direction:column; align-items:center;}
-#preview div {width:100%; text-align:left; font-size:10px; margin-bottom:5px;}
-#preview img {width:100%; height:100%; object-fit:cover;}
-.btn3d {padding:15px 30px; font-size:16px; border-radius:12px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);}
-.btn3d:active {transform:translateY(5px); box-shadow:0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
+#preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
+#preview img {margin-top:10px; object-fit:contain;}
+.btn3d {
+    padding:15px 30px; font-size:16px; border-radius:12px;
+    color:#fff; cursor:pointer; border:none;
+    background:linear-gradient(145deg,#3498db,#2980b9);
+    box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);
+}
+.btn3d:active {
+    transform:translateY(5px);
+    box-shadow:0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);
+}
 #imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
 .img-box {position:relative;}
 .delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:20px; height:20px; cursor:pointer;}
@@ -43,25 +51,32 @@ const { jsPDF } = window.jspdf;
 let pdfPages = [];
 let imgData = null;
 
-// Load saved image
+// Load saved image from localStorage
 const savedImage = localStorage.getItem('voterImage');
 if(savedImage){ imgData = savedImage; displayImage(imgData); }
 
+// PDF Upload
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
     const arrayBuffer = await file.arrayBuffer();
     const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
     pdfPages = [];
+
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
-        const content = await page.getTextContent();
-        const pageText = content.items.map(item=>item.str).join(' ');
-        pdfPages.push(pageText);
+        const viewport = page.getViewport({scale:2}); // better resolution
+        const canvas = document.createElement('canvas');
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
+        const context = canvas.getContext('2d');
+        await page.render({canvasContext: context, viewport: viewport}).promise;
+        pdfPages.push(canvas.toDataURL('image/jpeg'));
     }
     alert("PDF processed successfully!");
 });
 
+// Image Upload and save
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
@@ -87,62 +102,67 @@ function displayImage(src){
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Merge preview using HTML
+// Merge Preview
 function mergePreview(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return; }
     const previewDiv = document.getElementById('preview');
     previewDiv.innerHTML='';
 
-    // PDF text as divs
-    pdfPages.forEach(pageText=>{
-        const lines = pageText.split('\n');
-        lines.forEach(line=>{
-            const div = document.createElement('div');
-            div.innerText = line;
-            previewDiv.appendChild(div);
-        });
+    pdfPages.forEach(pageData=>{
+        const img = new Image();
+        img.src = pageData;
+        img.style.width='120px'; // 2 inch approx
+        img.style.height='auto';
+        previewDiv.appendChild(img);
     });
 
-    // Image below
     if(imgData){
-        const img = document.createElement('img');
+        const img = new Image();
         img.src = imgData;
         img.style.width='50px'; // 2 inch approx
         img.style.height='50px';
+        img.style.marginTop='5px';
         previewDiv.appendChild(img);
     }
 }
 
-// Generate jsPDF for print/download/WhatsApp
+// Generate jsPDF
 async function generateDoc(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
     const doc = new jsPDF({unit:'mm', format:[50,200]});
     let y=5;
-    for(const pageText of pdfPages){
-        const lines = doc.splitTextToSize(pageText, 45);
-        for(const line of lines){
-            doc.text(line,5,y);
-            y+=4;
-            if(y>160){ doc.addPage(); y=5; }
-        }
+    for(const pageData of pdfPages){
+        const img = new Image();
+        img.src = pageData;
+        await new Promise(r=>img.onload=r);
+        const imgProps = doc.getImageProperties(img);
+        const pdfWidth = 45;
+        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
+        y += pdfHeight + 2;
     }
     if(imgData){
         const img = new Image();
-        img.src=imgData;
+        img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,40,40);
+        doc.addImage(imgData,'JPEG',5,y,45,45); // 2 inch image
     }
     return doc;
 }
 
+// Print
 async function printDoc(){
     const doc = await generateDoc();
     if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
 }
+
+// Download
 async function downloadDoc(){
     const doc = await generateDoc();
     if(doc) doc.save('Voter_Merged.pdf');
 }
+
+// WhatsApp
 async function sendWhatsApp(){
     const doc = await generateDoc();
     const blob = doc.output('blob');
@@ -151,5 +171,6 @@ async function sendWhatsApp(){
     window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
+
 </body>
 </html>
