--- a/print.html
+++ b/print.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Voter PDF + Image Merge for Pocket Printer</title>
+<title>PDF + Image Merge Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 h2 {margin-bottom:20px;}
 input, button {margin:10px; padding:10px;}
 #preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
-#preview img {margin-top:10px; object-fit:contain;}
+#preview img {margin-top:10px; object-fit:contain; width:120px; height:auto;}
 .btn3d {
-    padding:12px 25px; font-size:14px; border-radius:12px;
+    padding:15px 30px; font-size:16px; border-radius:12px;
     color:#fff; cursor:pointer; border:none;
     background:linear-gradient(145deg,#3498db,#2980b9);
     box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);
 }
 .btn3d:active {
-    transform:translateY(3px);
+    transform:translateY(5px);
     box-shadow:0 2px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);
 }
 #imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
@@ -27,7 +27,7 @@ input, button {margin:10px; padding:10px;}
 </head>
 <body>
 
-<h2>Voter PDF + Image Merge Tool</h2>
+<h2>PDF + Image Merge Tool</h2>
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
@@ -51,32 +51,27 @@ const { jsPDF } = window.jspdf;
 let pdfPages = [];
 let imgData = null;
 
-// Load saved image
+// Load saved image from localStorage
 const savedImage = localStorage.getItem('voterImage');
 if(savedImage){ imgData = savedImage; displayImage(imgData); }
 
-// PDF Upload
+// PDF upload and text extraction
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
     const arrayBuffer = await file.arrayBuffer();
     const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
     pdfPages = [];
-
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
-        const viewport = page.getViewport({scale:2});
-        const canvas = document.createElement('canvas');
-        canvas.width = viewport.width;
-        canvas.height = viewport.height;
-        const context = canvas.getContext('2d');
-        await page.render({canvasContext: context, viewport: viewport}).promise;
-        pdfPages.push(canvas.toDataURL('image/jpeg'));
+        const content = await page.getTextContent();
+        const pageText = content.items.map(item=>item.str).join(' ');
+        pdfPages.push(pageText);
     }
     alert("PDF processed successfully!");
 });
 
-// Image Upload
+// Image upload (save once)
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
@@ -102,49 +97,44 @@ function displayImage(src){
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Merge Preview
+// Merge preview
 function mergePreview(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return; }
     const previewDiv = document.getElementById('preview');
     previewDiv.innerHTML='';
 
-    pdfPages.forEach(pageData=>{
-        const img = new Image();
-        img.src = pageData;
-        img.style.width='120px'; // 2 inch
-        img.style.height='auto';
-        previewDiv.appendChild(img);
+    pdfPages.forEach(text=>{
+        const div = document.createElement('div');
+        div.innerText = text;
+        div.style.fontSize = '8px';
+        div.style.textAlign = 'left';
+        previewDiv.appendChild(div);
     });
 
     if(imgData){
-        const img = new Image();
+        const img = document.createElement('img');
         img.src = imgData;
-        img.style.width='45px'; 
+        img.style.width='45px';  // 2 inch approx
         img.style.height='45px';
-        img.style.marginTop='5px';
         previewDiv.appendChild(img);
     }
 }
 
-// Generate jsPDF
+// Generate jsPDF for print/download/WhatsApp
 async function generateDoc(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // width ~2inch
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
     let y=5;
-    for(const pageData of pdfPages){
-        const img = new Image();
-        img.src = pageData;
-        await new Promise(r=>img.onload=r);
-        const props = doc.getImageProperties(img);
-        const pdfWidth = 45;
-        const pdfHeight = (props.height * pdfWidth)/props.width;
-        if(y+pdfHeight > 180){ doc.addPage(); y=5; }
-        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
-        y+=pdfHeight+2;
+    for(const text of pdfPages){
+        const lines = doc.splitTextToSize(text, 45);
+        for(const line of lines){
+            doc.text(line,5,y);
+            y+=4;
+            if(y>180){ doc.addPage(); y=5; }
+        }
     }
 
     if(imgData){
-        if(y+45 > 180){ doc.addPage(); y=5; }
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
@@ -153,19 +143,16 @@ async function generateDoc(){
     return doc;
 }
 
-// Print
 async function printDoc(){
     const doc = await generateDoc();
     if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
 }
 
-// Download
 async function downloadDoc(){
     const doc = await generateDoc();
     if(doc) doc.save('Voter_Merged.pdf');
 }
 
-// WhatsApp
 async function sendWhatsApp(){
     const doc = await generateDoc();
     const blob = doc.output('blob');
@@ -174,6 +161,5 @@ async function sendWhatsApp(){
     window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
-
 </body>
 </html>
