--- a/print.html
+++ b/print.html
@@ -3,18 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF + Image Merge Tool</title>
+<title>PDF + Image Merge Mini Printer</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 h2 {margin-bottom:20px;}
 input, button {margin:10px; padding:10px;}
 #preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
-#preview img {margin-top:10px; object-fit:contain; width:120px; height:auto;}
+#preview img {margin-top:10px; object-fit:contain; max-width:120px;}
 .btn3d {
-    padding:15px 30px; font-size:16px; border-radius:12px;
+    padding:12px 25px; font-size:16px; border-radius:12px;
     color:#fff; cursor:pointer; border:none;
     background:linear-gradient(145deg,#3498db,#2980b9);
     box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);
+    margin:5px;
 }
 .btn3d:active {
     transform:translateY(5px);
@@ -27,7 +28,7 @@ input, button {margin:10px; padding:10px;}
 </head>
 <body>
 
-<h2>PDF + Image Merge Tool</h2>
+<h2>PDF + Image Merge Mini Printer</h2>
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
@@ -51,11 +52,11 @@ const { jsPDF } = window.jspdf;
 let pdfPages = [];
 let imgData = null;
 
-// Load saved image from localStorage
+// Load saved image
 const savedImage = localStorage.getItem('voterImage');
 if(savedImage){ imgData = savedImage; displayImage(imgData); }
 
-// PDF upload and text extraction
+// PDF upload
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
@@ -64,14 +65,18 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
     pdfPages = [];
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
-        const content = await page.getTextContent();
-        const pageText = content.items.map(item=>item.str).join(' ');
-        pdfPages.push(pageText);
+        const viewport = page.getViewport({scale:2}); // high quality
+        const canvas = document.createElement('canvas');
+        const context = canvas.getContext('2d');
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
+        await page.render({canvasContext: context, viewport: viewport}).promise;
+        pdfPages.push(canvas.toDataURL('image/jpeg'));
     }
     alert("PDF processed successfully!");
 });
 
-// Image upload (save once)
+// Image upload
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
@@ -103,58 +108,66 @@ function mergePreview(){
     const previewDiv = document.getElementById('preview');
     previewDiv.innerHTML='';
 
-    pdfPages.forEach(text=>{
-        const div = document.createElement('div');
-        div.innerText = text;
-        div.style.fontSize = '8px';
-        div.style.textAlign = 'left';
-        previewDiv.appendChild(div);
+    pdfPages.forEach(pageData=>{
+        const img = new Image();
+        img.src = pageData;
+        img.style.width='120px';
+        img.style.height='auto';
+        previewDiv.appendChild(img);
     });
 
     if(imgData){
-        const img = document.createElement('img');
+        const img = new Image();
         img.src = imgData;
-        img.style.width='45px';  // 2 inch approx
-        img.style.height='45px';
+        img.style.width='50px';
+        img.style.height='50px';
         previewDiv.appendChild(img);
     }
 }
 
-// Generate jsPDF for print/download/WhatsApp
+// Generate jsPDF
 async function generateDoc(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2-inch width
     let y=5;
-    for(const text of pdfPages){
-        const lines = doc.splitTextToSize(text, 45);
-        for(const line of lines){
-            doc.text(line,5,y);
-            y+=4;
-            if(y>180){ doc.addPage(); y=5; }
-        }
+
+    for(const pageData of pdfPages){
+        const img = new Image();
+        img.src = pageData;
+        await new Promise(r=>img.onload=r);
+        const imgProps = doc.getImageProperties(img);
+        const pdfWidth = 45; // 2 inch
+        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
+        y+=pdfHeight+5;
     }
 
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,45,45);
+        doc.addImage(imgData,'JPEG',5,y,40,40);
     }
+
     return doc;
 }
 
+// Print
 async function printDoc(){
     const doc = await generateDoc();
     if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
 }
 
+// Download
 async function downloadDoc(){
     const doc = await generateDoc();
     if(doc) doc.save('Voter_Merged.pdf');
 }
 
+// WhatsApp send
 async function sendWhatsApp(){
     const doc = await generateDoc();
+    if(!doc) return;
     const blob = doc.output('blob');
     const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
     const url = URL.createObjectURL(file);
