--- a/print.html
+++ b/print.html
@@ -3,19 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF + Image Merge Mini Printer</title>
+<title>PDF + Image Merge Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 h2 {margin-bottom:20px;}
 input, button {margin:10px; padding:10px;}
 #preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
-#preview img {margin-top:10px; object-fit:contain; max-width:120px;}
+#preview img {margin-top:10px; object-fit:contain;}
 .btn3d {
-    padding:12px 25px; font-size:16px; border-radius:12px;
+    padding:15px 30px; font-size:16px; border-radius:12px;
     color:#fff; cursor:pointer; border:none;
     background:linear-gradient(145deg,#3498db,#2980b9);
     box-shadow:0 5px 0 #1c5980,0 8px 15px rgba(0,0,0,0.4);
-    margin:5px;
 }
 .btn3d:active {
     transform:translateY(5px);
@@ -28,7 +27,7 @@ input, button {margin:10px; padding:10px;}
 </head>
 <body>
 
-<h2>PDF + Image Merge Mini Printer</h2>
+<h2>PDF + Image Merge Tool</h2>
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
@@ -56,7 +55,6 @@ let imgData = null;
 const savedImage = localStorage.getItem('voterImage');
 if(savedImage){ imgData = savedImage; displayImage(imgData); }
 
-// PDF upload
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
@@ -65,7 +63,7 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
     pdfPages = [];
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
-        const viewport = page.getViewport({scale:2}); // high quality
+        const viewport = page.getViewport({scale:2}); // high res
         const canvas = document.createElement('canvas');
         const context = canvas.getContext('2d');
         canvas.width = viewport.width;
@@ -76,7 +74,6 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
     alert("PDF processed successfully!");
 });
 
-// Image upload
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
@@ -102,7 +99,7 @@ function displayImage(src){
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Merge preview
+// Merge preview using HTML
 function mergePreview(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return; }
     const previewDiv = document.getElementById('preview');
@@ -111,7 +108,7 @@ function mergePreview(){
     pdfPages.forEach(pageData=>{
         const img = new Image();
         img.src = pageData;
-        img.style.width='120px';
+        img.style.width='120px'; // 2 inch approx
         img.style.height='auto';
         previewDiv.appendChild(img);
     });
@@ -125,54 +122,45 @@ function mergePreview(){
     }
 }
 
-// Generate jsPDF
+// Generate jsPDF for print/download/WhatsApp
 async function generateDoc(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2-inch width
+    const doc = new jsPDF({unit:'mm', format:[60,300]}); // pocket printer size adjust
     let y=5;
-
     for(const pageData of pdfPages){
         const img = new Image();
         img.src = pageData;
         await new Promise(r=>img.onload=r);
-        const imgProps = doc.getImageProperties(img);
-        const pdfWidth = 45; // 2 inch
-        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
+        const pdfWidth = 55; // scale to fit paper width
+        const pdfHeight = (img.height * pdfWidth)/img.width;
+        doc.addImage(img,'JPEG',3,y,pdfWidth,pdfHeight);
         y+=pdfHeight+5;
     }
-
     if(imgData){
         const img = new Image();
         img.src = imgData;
         await new Promise(r=>img.onload=r);
-        doc.addImage(imgData,'JPEG',5,y,40,40);
+        doc.addImage(imgData,'JPEG',3,y,40,40);
     }
-
     return doc;
 }
 
-// Print
 async function printDoc(){
     const doc = await generateDoc();
     if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
 }
-
-// Download
 async function downloadDoc(){
     const doc = await generateDoc();
     if(doc) doc.save('Voter_Merged.pdf');
 }
-
-// WhatsApp send
 async function sendWhatsApp(){
     const doc = await generateDoc();
-    if(!doc) return;
     const blob = doc.output('blob');
     const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
     const url = URL.createObjectURL(file);
     window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
+
 </body>
 </html>
