--- a/print.html
+++ b/print.html
@@ -5,24 +5,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PDF + Image Merge Tool</title>
 <style>
-body {font-family: Arial, sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
-h2 {margin-bottom:10px;}
+body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
+h2 {margin-bottom:15px;}
 input, button {margin:5px; padding:5px; font-size:12px;}
 #preview {border:1px solid #ccc; padding:10px; margin-top:10px; display:flex; flex-direction:column; align-items:center;}
-#preview canvas {margin-top:5px;}
+#preview img {margin:5px 0; object-fit:contain;}
 .btn3d {
-    padding:8px 15px; font-size:12px; border-radius:8px;
+    padding:8px 20px; font-size:12px; border-radius:8px;
     color:#fff; cursor:pointer; border:none;
     background:linear-gradient(145deg,#3498db,#2980b9);
-    box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);
+    box-shadow:0 3px 0 #1c5980,0 5px 10px rgba(0,0,0,0.4);
 }
 .btn3d:active {
     transform:translateY(3px);
-    box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);
+    box-shadow:0 1px 0 #1c5980,0 3px 6px rgba(0,0,0,0.4);
 }
-#imagesList {display:flex; flex-wrap:wrap; gap:5px; margin-top:5px;}
+#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:5px;}
 .img-box {position:relative;}
-.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:15px; height:15px; cursor:pointer; font-size:10px;}
+.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:16px; height:16px; cursor:pointer;}
 </style>
 </head>
 <body>
@@ -66,10 +66,10 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
         const page = await pdf.getPage(i);
         const viewport = page.getViewport({scale:2});
         const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
+        const ctx = canvas.getContext('2d');
         canvas.width = viewport.width;
         canvas.height = viewport.height;
-        await page.render({canvasContext: context, viewport: viewport}).promise;
+        await page.render({canvasContext: ctx, viewport: viewport}).promise;
         pdfPages.push(canvas.toDataURL('image/jpeg'));
     }
     alert("PDF processed successfully!");
@@ -94,89 +94,54 @@ function displayImage(src){
     const box = document.createElement('div');
     box.className='img-box';
     const img=document.createElement('img');
-    img.src=src; img.style.width='60px'; img.style.height='60px';
+    img.src=src; img.style.width='100px'; img.style.height='100px';
     const del = document.createElement('button');
     del.innerText='X'; del.className='delete-btn';
     del.onclick=()=>{ localStorage.removeItem('voterImage'); imgData=null; div.innerHTML=''; };
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Merge preview
+// Merge & Preview
 function mergePreview(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return; }
     const previewDiv = document.getElementById('preview');
     previewDiv.innerHTML='';
-    const canvas = document.createElement('canvas');
-    const ctx = canvas.getContext('2d');
-
-    // Determine total height
-    let totalHeight = 0;
-    const pdfImages = [];
-    for(const pageData of pdfPages){
+    pdfPages.forEach(pageData=>{
         const img = new Image();
         img.src = pageData;
-        pdfImages.push(img);
-        awaitImageLoad(img);
-        totalHeight += img.height;
-    }
-    let imgHeight = 0;
-    if(imgData){
-        const voterImg = new Image();
-        voterImg.src = imgData;
-        awaitImageLoad(voterImg);
-        imgHeight = 100; // 2 inch approx
-        totalHeight += imgHeight + 5;
-    }
-
-    canvas.width = 300; // pixels, scaled for preview
-    canvas.height = totalHeight;
-    ctx.fillStyle='white';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-
-    let y=0;
-    for(const img of pdfImages){
-        const scale = canvas.width / img.width;
-        const h = img.height * scale;
-        ctx.drawImage(img,0,y,canvas.width,h);
-        y+=h;
-    }
-
-    if(imgData){
-        const img = new Image();
-        img.src = imgData;
-        awaitImageLoad(img);
-        ctx.drawImage(img, 0, y, 100, 100); // 2 inch
-    }
-
-    previewDiv.appendChild(canvas);
+        img.style.width='120px'; // 2 inch approx
+        img.style.height='auto';
+        previewDiv.appendChild(img);
+        if(imgData){
+            const voterImg = new Image();
+            voterImg.src = imgData;
+            voterImg.style.width='50px'; // 2x2 inch approx in preview
+            voterImg.style.height='50px';
+            voterImg.style.marginTop='5px';
+            previewDiv.appendChild(voterImg);
+        }
+    });
 }
 
-// Helper
-function awaitImageLoad(img){
-    return new Promise(r=>{ if(img.complete) r(); else img.onload=r; });
-}
-
-// jsPDF generate
+// Generate jsPDF
 async function generateDoc(){
     if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
     const doc = new jsPDF({unit:'mm', format:[50,200]});
-    let y=0;
     for(const pageData of pdfPages){
         const img = new Image();
         img.src = pageData;
-        await awaitImageLoad(img);
+        await new Promise(r=>img.onload=r);
+        const imgProps = doc.getImageProperties(img);
         const pdfWidth = 45;
-        const pdfHeight = (img.height * pdfWidth) / img.width;
-        if(y+pdfHeight > 200){ doc.addPage(); y=0; }
-        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
-        y+=pdfHeight + 2;
-    }
-    if(imgData){
-        const img = new Image();
-        img.src = imgData;
-        await awaitImageLoad(img);
-        if(y+40 > 200){ doc.addPage(); y=0; }
-        doc.addImage(img,'JPEG',5,y,40,40);
+        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+        doc.addImage(img,'JPEG',5,5,pdfWidth,pdfHeight);
+        if(imgData){
+            const voterImg = new Image();
+            voterImg.src = imgData;
+            await new Promise(r=>voterImg.onload=r);
+            doc.addImage(imgData,'JPEG',5,pdfHeight+10,40,40);
+        }
+        doc.addPage(); // next page
     }
     return doc;
 }
@@ -197,5 +162,6 @@ async function sendWhatsApp(){
     window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
+
 </body>
 </html>
