--- a/print.html
+++ b/print.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Voter PDF + Image Tool</title>
+<title>Voter PDF OCR + Image Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 h2 {margin-bottom:15px;}
 input, button {margin:5px; padding:6px; font-size:12px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:15px; display:flex; flex-direction:column; align-items:center;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:15px; display:flex; flex-direction:column; align-items:flex-start;}
 #preview div {width:100%; font-size:10px; text-align:left; margin-bottom:2px;}
 #preview img {margin-top:5px; object-fit:cover;}
 .btn3d {padding:6px 12px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
@@ -20,7 +20,7 @@ input, button {margin:5px; padding:6px; font-size:12px;}
 </head>
 <body>
 
-<h2>Voter PDF + Image Tool</h2>
+<h2>Voter PDF OCR + Image Tool</h2>
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
@@ -31,7 +31,6 @@ input, button {margin:5px; padding:6px; font-size:12px;}
 <button class="btn3d" onclick="mergePreview()">Merge & Preview</button>
 <button class="btn3d" onclick="printDoc()">Print</button>
 <button class="btn3d" onclick="downloadDoc()">Download</button>
-<button class="btn3d" onclick="sendWhatsApp()">WhatsApp Send</button>
 
 <h3>Preview:</h3>
 <div id="preview"></div>
@@ -74,14 +73,12 @@ function displayVoterImage(src){
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// PDF upload & extract text
+// PDF upload & OCR
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
-
     const arrayBuffer = await file.arrayBuffer();
     const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
-
     let fullText = '';
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
@@ -93,13 +90,11 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
         await page.render({canvasContext: ctx, viewport: viewport}).promise;
         const imgData = canvas.toDataURL('image/png');
 
-        // OCR using Tesseract.js
-        const result = await Tesseract.recognize(imgData, 'eng+mar', { logger: m => console.log(m) });
+        const result = await Tesseract.recognize(imgData, 'eng+mar');
         fullText += result.data.text + '\n';
     }
-
     pdfText = extractFields(fullText);
-    alert("PDF processed and text extracted!");
+    alert("PDF OCR completed!");
 });
 
 // Extract required fields safely
@@ -137,7 +132,7 @@ function mergePreview(){
 // Generate jsPDF
 async function generateDoc(){
     if(!pdfText){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // mini printer width
+    const doc = new jsPDF({unit:'mm', format:[50,200]});
     let y=5;
     for(const [k,v] of Object.entries(pdfText)){
         doc.text(`${k}: ${v}`,5,y);
@@ -159,13 +154,6 @@ async function printDoc(){
 async function downloadDoc(){
     const doc = await generateDoc();
     if(doc) doc.save('Voter_Merged.pdf');
-}
-async function sendWhatsApp(){
-    const doc = await generateDoc();
-    const blob = doc.output('blob');
-    const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
-    const url = URL.createObjectURL(file);
-    window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
 </body>
