--- a/print.html
+++ b/print.html
@@ -90,7 +90,9 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
         await page.render({canvasContext: ctx, viewport: viewport}).promise;
         const imgData = canvas.toDataURL('image/png');
 
-        const result = await Tesseract.recognize(imgData, 'eng+mar');
+        const result = await Tesseract.recognize(imgData, 'eng+mar',{
+            logger: m => console.log(m)
+        });
         fullText += result.data.text + '\n';
     }
     pdfText = extractFields(fullText);
@@ -105,7 +107,8 @@ function extractFields(text){
         'Last Name': getLine(/Last Name\s*[:\-]\s*(.*)/i) || getLine(/आडनाव\s*[:\-]\s*(.*)/i),
         'EPIC No': getLine(/EPIC No\s*[:\-]\s*(.*)/i) || getLine(/EPIC क्रमांक\s*[:\-]\s*(.*)/i),
         'Polling Station': getLine(/Polling Station\s*[:\-]\s*(.*)/i) || getLine(/मतदान केंद्र\s*[:\-]\s*(.*)/i),
-        'Part Number': getLine(/Part Number\s*[:\-]\s*(.*)/i) || getLine(/भाग क्रमांक[\-]भागाचे नाव\s*[:\-]\s*(.*)/i),
+        'Part Number': getLine(/Part Number\s*[:\-]\s*(.*)/i) || getLine(/भाग क्रमांक\s*[:\-]\s*(.*)/i),
+        'Part Name': getLine(/Part Name\s*[:\-]\s*(.*)/i) || getLine(/भागाचे नाव\s*[:\-]\s*(.*)/i),
         'Part Serial': getLine(/Part Serial\s*[:\-]\s*(.*)/i) || getLine(/भाग अनुक्रम क्रमांक\s*[:\-]\s*(.*)/i)
     };
 }
@@ -122,8 +125,8 @@ function mergePreview(){
     }
     if(voterImg){
         const img = new Image();
-        img.src = voterImg;
-        img.style.width='40px';  // 2 inch approx
+        img.src=voterImg;
+        img.style.width='40px';
         img.style.height='40px';
         preview.appendChild(img);
     }
@@ -136,7 +139,7 @@ async function generateDoc(){
     let y=5;
     for(const [k,v] of Object.entries(pdfText)){
         doc.text(`${k}: ${v}`,5,y);
-        y+=5;
+        y+=6; // line spacing
     }
     if(voterImg){
         const img = new Image();
