--- a/dashboard.html
+++ b/dashboard.html
@@ -16,12 +16,12 @@
 <div class="button-container">
 
   <button class="btn3d color-btn"
-    onclick="window.open('https://electoralsearch.eci.gov.in/', '_blank')">
+    onclick="window.open('https://electoralsearch.eci.gov.in/=', '_blank')">
     Election Search
   </button>
 
   <button class="btn3d color-btn"
-    onclick="window.open('https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName', '_blank')">
+    onclick="window.open('https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName=', '_blank')">
     Voter Name Search
   </button>
 
